# manimator

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: manim_mcp_client.py
manim-mcp-server/src/: manim_server.py
